public class MenuPrincipal {
    public static void main(String[] args) {
        System.out.println("test");
    }
}
