package menuprincipal.battleship.plateau;

import javafx.util.Pair;

public abstract class Plateau {
    protected Case[][] cases;
    public void ajouterTir(Pair<Double, Double> coordonee) {
    }
}
